# BareFlux

./: .gitignore  Makefile  PATCH_NOTES_BAREFLUX_v0_2_0.md  PATCH_NOTES_BAREFLUX_v0_2_1.md  PATCH_README.txt  README.md  README.txt  README_ORCHESTRATION.md  constraints.txt  pyproject.toml  requirements-dev.txt  run_modules.sh
.codex_tmp_mcs_model/mcs-model/: .gitignore  README.md  ROADMAP.md  pyproject.toml
.codex_tmp_mcs_model/mcs-model/.github/workflows/: ci.yml
.codex_tmp_mcs_model/mcs-model/app/: streamlit_app.py
.codex_tmp_mcs_model/mcs-model/examples/: quickstart.py
.codex_tmp_mcs_model/mcs-model/src/mcs/: __init__.py  core.py  extensions.py  network.py  scenarios.py  simulator.py
.codex_tmp_mcs_model/mcs-model/tests/: test_core.py  test_debt.py  test_extensions.py  test_scenarios.py
.github/: constraints.txt  settings.yml
.github/workflows/: apply-repo-settings.yml  bareflux-improvements.yml  ci.yml  collect-stable.yml  mass-collect.yml  orchestrate.yml  run-all.yml
.venv_check/: pyvenv.cfg
.venv_check/Scripts/: activate  activate.bat
_check_run/: batch_manifest.json
_check_run/run_20260707T181730Z_e9fc81/: hashes.sha256  report.json  run_manifest.json
_ci_out/datasets/: current.csv  multi.csv  previous_shadow.csv
apexobserver/: __init__.py  cli.py  engine.py  hashing.py  util.py
apexobserver/schemas/: report.schema.json  run_manifest.schema.json
ci_snippets/: github_actions_step.yml  github_actions_steps.yml  parallel_matrix.yml
configs/: apex_default.json  bareflux_default.json
docs/: BADGES_SNIPPET.md  OPTIONAL_MODULES.md
examples/: README.md  apex.json  extract_and_print.py  make_report_md.py  minimal_timeseries.csv
schema/: bareflux_manifest.schema.json  config.schema.json  mass_collect_overview.schema.json  report.schema.json  robustness_stress.schema.json
scripts/: cleanup_obsolete_bareflux_files.sh
src/: bare_flux.py
src/apexobserver/: cli.py  engine.py  plotting.py  runner.py  schema.py  utils.py
src/bareflux/: __init__.py  cli.py  engine.py  hashing.py  orchestration.py
tests/: conftest.py  test_bareflux_smoke.py  test_run.py  test_smoke.py
tools/: advanced_outliers_iforest.py  advanced_report_html.py  bareflux_postprocess.py  collect_stable.py  config_score.json  dedup_artifacts.py  distances.py  fix_up047_perf_timer.py  generate_synth_datasets.py  mass_collect_overview.py  outlier_isolation_forest.py  report_html_skeleton.py  riftlens_stability.py  riftlens_sweep_report.py  robustness_stress_tests.py  store_history.py  trend_report.py  voidmark_compare.py  voidmark_profiles.py
tools/optional/: parallel_runner.py  (+3 more)
(+6 files in other folders)
