[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BareFlux"
version = "0.2.0"
description = "CI-native orchestrator for RiftLens, NullTrace and VoidMark with auditable manifests and stability checks."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "BareFlux Contributors"}]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "jsonschema>=4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "black>=24.8.0",
  "mypy>=1.11.0"
]

[project.scripts]
bareflux = "bareflux.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bareflux = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
packages = ["bareflux"]
ignore_missing_imports = true
